close on last window

--- a/files/kitty/kitty.conf
+++ b/files/kitty/kitty.conf
@@ -1433,7 +1433,7 @@ remember_window_size  yes
 #: kitty will cycle through various known editors (vim, emacs, etc.)
 #: and take the first one that exists on your system.
 
-close_on_child_death yes
+# close_on_child_death yes
 
 #: Close the window when the child process (usually the shell) exits.
 #: With the default value no, the terminal will remain open when the
@@ -1839,7 +1839,7 @@ macos_titlebar_color background
 #: Dock). Changing this option by reloading the config is not
 #: supported.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed on macOS.
 #: By default, kitty will stay running, even with no open windows, as
